# turbo

./: docker-compose.yml
turbo_backend/: .gitignore  Cargo.toml  Dockerfile  index.html
turbo_backend/.github/workflows/: rust.yml
turbo_backend/src/: auth.rs  main.rs
turbo_backend/src/api/: directory_endpoints.rs  file_endpoints.rs  mod.rs  user_endpoints.rs
turbo_backend/src/models/: directory.rs  media_file.rs  mod.rs  user.rs
turbo_backend/src/repo/: directory_repository.rs  file_repository.rs  mock_user_repository.rs  mod.rs  mongo_user_repository.rs  user_repository.rs  utils.rs
turbo_backend/src/state/: app_state.rs  mod.rs  prod_state.rs  test_state.rs
turbo_backend/src/tests/: common.rs  mod.rs  test_auth.rs  test_create_directory.rs  test_create_user.rs  test_delete_directory.rs  test_get_directory.rs  test_get_user.rs  test_rename_directory.rs  test_share_directory.rs
turbo_backend/src/tests/test_directory_endpoints/: mod.rs  test_create_directory.rs  test_delete_directory.rs  test_get_directory.rs  test_rename_directory.rs  test_share_directory.rs
turbo_backend/src/tests/test_file_endpoints/: mod.rs  test_upload_file.rs
turbo_frontend/: .gitignore  Dockerfile  README.md  analysis_options.yaml  pubspec.yaml  todo
turbo_frontend/lib/: main.dart  network_service.dart
turbo_frontend/lib/cubit/: auth_cubit.dart  auth_state.dart  directory_cubit.dart  directory_state.dart  folder_cubit.dart  folder_state.dart  image_viewer_cubit.dart  image_viewer_state.dart  media_cubit.dart  media_state.dart  (+2 more)
turbo_frontend/test/: widget_test.dart
(+28 files in other folders)
