[package]
name = "turbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-http = "3.4.0"
actix-multipart = "0.6.1"
actix-service = "2.0.2"
actix-web = "4.4.0"
async-trait = "0.1.73"
chrono = "0.4.31"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
mime = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
urlencoding = "2.1.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 
